pkg/ibmvpc/examples/out/explain_out/QueryConnectionSGRules4_all_vpcs_explain_debug.txt
Explaining connectivity from vsi3a-ky to vsi1-ky within test-vpc1-ky using "protocol: TCP dst-ports: 120-230"
=============================================================================================================

Connections are allowed from vsi3a-ky[10.240.30.5] to vsi1-ky[10.240.10.4] using "protocol: TCP dst-ports: 120-230"

Path:
	vsi3a-ky[10.240.30.5] -> security group sg3-ky -> subnet3-ky -> network ACL acl3-ky -> 
	network ACL acl1-ky -> subnet1-ky -> security group sg1-ky -> vsi1-ky[10.240.10.4]


Details:
~~~~~~~~
Egress:
security group sg3-ky allows connection with the following allow rules
	index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
	index: 2, direction: outbound,  conns: protocol: tcp,  dstPorts: 1-65535, remote: 0.0.0.0/0, local: 0.0.0.0/0
	index: 3, direction: outbound,  conns: protocol: tcp,  dstPorts: 100-200, remote: 0.0.0.0/0, local: 0.0.0.0/0
network ACL acl3-ky allows connection with the following allow rules
	index: 0, direction: outbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow

Ingress:
network ACL acl1-ky allows connection with the following allow rules
	index: 1, direction: inbound , src: 0.0.0.0/0 , dst: 0.0.0.0/0, conn: all, action: allow
security group sg1-ky allows connection with the following allow rules
	index: 4, direction: inbound,  conns: protocol: all, remote: sg3-ky (10.240.30.5/32,10.240.30.6/32), local: 0.0.0.0/0

------------------------------------------------------------------------------------------------------------------------
